--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 لینکدین
             </a>
             
-            <a href="fluent2004.github.io/resume.html" class="btn resume">
+            <a href="resume.html" class="btn resume">
                 <i class="fas fa-file-alt"></i>
                 رزومه کاری
             </a>
