--- a/resume.html
+++ b/resume.html
@@ -283,7 +283,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="https://via.placeholder.com/150" alt="عکس پروفایل" class="profile-img">
+            <img src="20250307_224159.jpg" alt="عکس پروفایل" class="profile-img">
             <h1>محمدرضا مرادی نور</h1>
             <h2>مشاور و کارشناس تخصصی بیمه</h2>
             
