--- a/resume.html
+++ b/resume.html
@@ -609,7 +609,7 @@
               };
             
               try {
-                const response = await fetch('URL_اسکریپت_شما', {
+                const response = await fetch('https://script.google.com/macros/s/AKfycbwzIqjY6tRFYvQk6mo1auhb83nZsdshpdVe27YOXb6-ZoG1dwDO5BJGH7-X5bvsECjyNw/exec', {
                   method: 'POST',
                   headers: {'Content-Type': 'application/json'},
                   body: JSON.stringify(formData)
