--- a/new.html
+++ b/new.html
@@ -484,8 +484,8 @@
                 <div class="skill">مدیریت ریسک</div>
                 <div class="skill">مذاکره حرفه‌ای</div>
                 <div class="skill">تحلیل بازار بیمه</div>
-                <div class="skill">ارائه طرح‌های اختصاصی</div>
-                <div class="skill">زبان انگلیسی (تسلط)</div>
+                <div class="skill">نمیدونم چی بنویسم </div>
+                <div class="skill">مشاوره در خصوص انواع بیمه خودرو</div>
             </div>
         </section>
         
@@ -518,7 +518,7 @@
                 <h3 style="color: var(--success); margin-bottom: 1rem;">درخواست شما با موفقیت ثبت شد!</h3>
                 <p>مشاوره شما دریافت شد و در اسرع وقت با شما تماس خواهیم گرفت.</p>
                 <p style="margin-top: 1rem; color: var(--secondary);">
-                    <i class="fas fa-phone"></i> برای ارتباط فوری: ۰۹۸۹۳۳۵۳۱۸۹۱۹
+                    <i class="fas fa-phone"></i> برای ارتباط فوری: ۰۹۳۳۵۳۱۸۹۱۹
                 </p>
             </div>
             
