--- a/present.html
+++ b/present.html
@@ -339,7 +339,7 @@
     
     <footer>
         <div class="container">
-            <div class="logo">گروه بهبود فرآیندها</div>
+            <div class="logo">(😎)گروه بهبود فرآیندها</div>
             <p>ارائه پیشنهادات برای ارتقای سیستم‌های سازمان</p>
             <p class="date">تاریخ ارائه: 1404/01/25</p>
         </div>
