--- a/map.html
+++ b/map.html
@@ -352,6 +352,7 @@
   map.locate({setView: false, maxZoom: 10});
 
   // افزودن راهنما (Legend)
+    // افزودن راهنما (Legend)
   const legend = L.control({position: 'bottomleft'});
   legend.onAdd = function(map) {
     const div = L.DomUtil.create('div', 'legend');
