--- a/risc.html
+++ b/risc.html
@@ -601,9 +601,9 @@
             <div class="slide-body">
                 <div class="presenter-info">
                     <p>درس: مدیریت ریسک</p>
-                    <p>ارائه‌دهنده: [نام شما]</p>
-                    <p>استاد: [نام استاد]</p>
-                    <p>تاریخ ارائه: [تاریخ]</p>
+                    <p>ارائه‌دهنده: [محمدرضا مرادی نور]</p>
+                    <p>استاد: [دکتر خبره]</p>
+                    <p>تاریخ ارائه: [1404/02/23]</p>
                 </div>
             </div>
         </div>
@@ -964,15 +964,11 @@
             <div class="floating-shape shape-1"></div>
             <div class="floating-shape shape-2"></div>
             <div class="slide-header">
-                <h1 class="thank-you-title floating">سپاسگزارم</h1>
-                <p class="thank-you-subtitle">از توجه شما متشکرم</p>
+                <p class="thank-you-subtitle">از توجه شما بسیار متشکرم</p>
             </div>
             <div class="slide-body">
                 <p style="font-size: 24px; margin-top: 50px;">آیا سوالی دارید؟</p>
                 <div class="contact-info">
-                    <p>[نام شما]</p>
-                    <p>[اطلاعات تماس]</p>
-                    <p>[ایمیل]</p>
                 </div>
             </div>
         </div>
