--- a/risc.html
+++ b/risc.html
@@ -964,7 +964,7 @@
             <div class="floating-shape shape-1"></div>
             <div class="floating-shape shape-2"></div>
             <div class="slide-header">
-                <p class="thank-you-subtitle">از توجه شما بسیار متشکرم</p>
+                <h1 class="thank-you-title floating">✌🌹از توجه شما بسیار سپاسگزارم</h1>
             </div>
             <div class="slide-body">
                 <p style="font-size: 24px; margin-top: 50px;">آیا سوالی دارید؟</p>
