--- a/risc.html
+++ b/risc.html
@@ -601,9 +601,9 @@
             <div class="slide-body">
                 <div class="presenter-info">
                     <p>درس: مدیریت ریسک</p>
-                    <p>ارائه‌دهنده: [محمدرضا مرادی نور]</p>
-                    <p>استاد: [دکتر خبره]</p>
-                    <p>تاریخ ارائه: [1404/02/23]</p>
+                    <p>ارائه‌دهنده: محمدرضا مرادی نور</p>
+                    <p>استاد: دکتر خبره</p>
+                    <p>تاریخ ارائه: 1404/02/23</p>
                 </div>
             </div>
         </div>
