--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ document.addEventListener('DOMContentLoaded', function () {
       <div class="popup-content">
         <strong>شهر:</strong> ${bank.city}<br>
         <strong>آدرس:</strong> ${bank.address}<br><br>
-        <i class="fas fa-phone" style="color: #3498db;"></i> 021-12345678
+        <i class="fas fa-phone" style="color: #3498db;"></i> 
       </div>
     `);
   });
