--- a/index.html
+++ b/index.html
@@ -9,21 +9,60 @@
 <body>
   <header>
     <h1>تأثیر شبکه‌های اجتماعی بر سلامت روان نوجوانان</h1>
-    <p>تحلیل ۵ مقاله با رویکردهای متنوع تحقیقاتی</p>
+    <p>مروری بر ۴ مقاله علمی با رویکردهای مختلف (کمی، کیفی، ترکیبی)</p>
   </header>
 
-  <main id="articles"></main>
+  <main id="articles">
+    <!-- کارت‌های مقاله به صورت داینامیک با JS وارد می‌شن -->
+  </main>
 
   <section class="summary">
-    <h2>جمع‌بندی و تحلیل نهایی</h2>
+    <h2>مقایسه و جمع‌بندی کلی</h2>
     <p>
-      مرور این مقالات نشان می‌دهد که شبکه‌های اجتماعی تأثیرات چندوجهی بر سلامت روان نوجوانان دارند. 
-      عوامل مثبت مانند ارتباط با همسالان و بیان فردی، در کنار عوامل منفی مانند مقایسه اجتماعی و قلدری سایبری، تصویری دوگانه ارائه می‌دهند.
-      استفاده از رویکرد ترکیبی در پژوهش سوم نیز نشان داد که روش‌های چندگانه تحلیلی دید دقیق‌تری به محقق می‌دهد.
-      پیشنهاد می‌شود در تحقیقات آتی به متغیرهای فرهنگی، جنسیت و زمان‌بندی مصرف توجه ویژه‌ای شود.
+      تحلیل این چهار مقاله نشان می‌دهد که شبکه‌های اجتماعی تأثیرات چندوجهی و متضادی بر سلامت روان نوجوانان دارند. استفاده بیش‌از‌حد از این شبکه‌ها اغلب با اضطراب، افسردگی، اختلال خواب و مقایسه اجتماعی همراه است، در حالی که برخی مطالعات به تأثیرات مثبت مانند حمایت اجتماعی و بیان فردی اشاره دارند. رویکرد ترکیبی (مقاله ۳) به‌خوبی نقش عوامل واسطه‌ای مثل تجربیات کودکی و سلامت روان را در شکل‌گیری اختلالات ناشی از استفاده افراطی روشن کرده است.
     </p>
   </section>
 
-  <script src="script.js"></script>
+  <script>
+    const articles = [
+      {
+        title: "دیدگاه نوجوانان درباره شبکه‌های اجتماعی و سلامت روان",
+        authors: "Popat & Tarrant (2022)",
+        method: "کیفی (Qualitative)",
+        summary: "تحلیل تجربیات نوجوانان از تأثیر شبکه‌های اجتماعی روی پنج محور: تأیید اجتماعی، مقایسه ظاهری، فشار اتصال دائم، تعاملات حمایتی و محتوای مضر."
+      },
+      {
+        title: "تأثیر شبکه‌های اجتماعی بر سلامت روان نوجوانان و جوانان",
+        authors: "Khalaf et al. (2023)",
+        method: "کمی (Systematic Review)",
+        summary: "داده‌های آماری نشان دادند که استفاده بیش‌از‌حد با افسردگی، اضطراب، بی‌خوابی و تصویر بدنی منفی مرتبط است."
+      },
+      {
+        title: "نقش سلامت روان در اختلال استفاده از شبکه‌های اجتماعی",
+        authors: "Bakır & Dilmaç (2025)",
+        method: "ترکیبی (Mixed Methods)",
+        summary: "سلامت روان واسطه‌ی ارتباط بین تجربیات منفی کودکی و اعتیاد به استفاده از شبکه‌های اجتماعی است؛ بررسی با داده‌های آماری و مصاحبه."
+      },
+      {
+        title: "درک نوجوانان هندی از شبکه‌های اجتماعی و سلامت روان",
+        authors: "Taddi et al. (2024)",
+        method: "کیفی (Descriptive Study)",
+        summary: "استفاده افراطی، اضطراب و اختلال خواب در نوجوانان دیده شد. هم‌زمان، نقش مثبتی در تعامل اجتماعی و بیان فردی نیز گزارش شد."
+      }
+    ];
+
+    const container = document.getElementById("articles");
+    articles.forEach(article => {
+      const div = document.createElement("div");
+      div.className = "card";
+      div.innerHTML = `
+        <h3>${article.title}</h3>
+        <p class="authors">${article.authors}</p>
+        <p class="method">${article.method}</p>
+        <p>${article.summary}</p>
+      `;
+      container.appendChild(div);
+    });
+  </script>
 </body>
 </html>
