--- a/index.html
+++ b/index.html
@@ -3,66 +3,58 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>تأثیر شبکه‌های اجتماعی بر سلامت روان نوجوانان</title>
+  <title>ارائه: تأثیر شبکه‌های اجتماعی بر سلامت روان نوجوانان</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Vazirmatn&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <h1>تأثیر شبکه‌های اجتماعی بر سلامت روان نوجوانان</h1>
-    <p>مروری بر ۴ مقاله علمی با رویکردهای مختلف (کمی، کیفی، ترکیبی)</p>
-  </header>
+  <div class="container">
+    <header>
+      <h1>تأثیر شبکه‌های اجتماعی بر سلامت روان نوجوانان</h1>
+      <p>ارائه تحلیلی بر اساس ۴ مقاله علمی</p>
+    </header>
 
-  <main id="articles">
-    <!-- کارت‌های مقاله به صورت داینامیک با JS وارد می‌شن -->
-  </main>
+    <section class="articles">
+      <div class="card">
+        <h2>مقاله ۱: مرور کیفی</h2>
+        <p class="authors">Popat & Tarrant (2022)</p>
+        <p><strong>روش:</strong> کیفی</p>
+        <p>بررسی تجربیات نوجوانان در ۵ محور: تأیید اجتماعی، مقایسه ظاهری، فشار اتصال، حمایت اجتماعی، محتوای مضر.</p>
+      </div>
 
-  <section class="summary">
-    <h2>مقایسه و جمع‌بندی کلی</h2>
-    <p>
-      تحلیل این چهار مقاله نشان می‌دهد که شبکه‌های اجتماعی تأثیرات چندوجهی و متضادی بر سلامت روان نوجوانان دارند. استفاده بیش‌از‌حد از این شبکه‌ها اغلب با اضطراب، افسردگی، اختلال خواب و مقایسه اجتماعی همراه است، در حالی که برخی مطالعات به تأثیرات مثبت مانند حمایت اجتماعی و بیان فردی اشاره دارند. رویکرد ترکیبی (مقاله ۳) به‌خوبی نقش عوامل واسطه‌ای مثل تجربیات کودکی و سلامت روان را در شکل‌گیری اختلالات ناشی از استفاده افراطی روشن کرده است.
-    </p>
-  </section>
+      <div class="card">
+        <h2>مقاله ۲: مرور کمی</h2>
+        <p class="authors">Khalaf et al. (2023)</p>
+        <p><strong>روش:</strong> کمی - مرور سیستماتیک</p>
+        <p>داده‌های آماری نشان دادند استفاده بیش از ۳ ساعت در روز با افسردگی، اضطراب، بی‌خوابی و نارضایتی ظاهری مرتبط است.</p>
+      </div>
 
-  <script>
-    const articles = [
-      {
-        title: "دیدگاه نوجوانان درباره شبکه‌های اجتماعی و سلامت روان",
-        authors: "Popat & Tarrant (2022)",
-        method: "کیفی (Qualitative)",
-        summary: "تحلیل تجربیات نوجوانان از تأثیر شبکه‌های اجتماعی روی پنج محور: تأیید اجتماعی، مقایسه ظاهری، فشار اتصال دائم، تعاملات حمایتی و محتوای مضر."
-      },
-      {
-        title: "تأثیر شبکه‌های اجتماعی بر سلامت روان نوجوانان و جوانان",
-        authors: "Khalaf et al. (2023)",
-        method: "کمی (Systematic Review)",
-        summary: "داده‌های آماری نشان دادند که استفاده بیش‌از‌حد با افسردگی، اضطراب، بی‌خوابی و تصویر بدنی منفی مرتبط است."
-      },
-      {
-        title: "نقش سلامت روان در اختلال استفاده از شبکه‌های اجتماعی",
-        authors: "Bakır & Dilmaç (2025)",
-        method: "ترکیبی (Mixed Methods)",
-        summary: "سلامت روان واسطه‌ی ارتباط بین تجربیات منفی کودکی و اعتیاد به استفاده از شبکه‌های اجتماعی است؛ بررسی با داده‌های آماری و مصاحبه."
-      },
-      {
-        title: "درک نوجوانان هندی از شبکه‌های اجتماعی و سلامت روان",
-        authors: "Taddi et al. (2024)",
-        method: "کیفی (Descriptive Study)",
-        summary: "استفاده افراطی، اضطراب و اختلال خواب در نوجوانان دیده شد. هم‌زمان، نقش مثبتی در تعامل اجتماعی و بیان فردی نیز گزارش شد."
-      }
-    ];
+      <div class="card">
+        <h2>مقاله ۳: مطالعه ترکیبی</h2>
+        <p class="authors">Bakır & Dilmaç (2025)</p>
+        <p><strong>روش:</strong> ترکیبی</p>
+        <p>سلامت روان واسطه بین تجربیات کودکی و اعتیاد به شبکه‌های اجتماعی. تحلیل آماری و مصاحبه کیفی.</p>
+      </div>
 
-    const container = document.getElementById("articles");
-    articles.forEach(article => {
-      const div = document.createElement("div");
-      div.className = "card";
-      div.innerHTML = `
-        <h3>${article.title}</h3>
-        <p class="authors">${article.authors}</p>
-        <p class="method">${article.method}</p>
-        <p>${article.summary}</p>
-      `;
-      container.appendChild(div);
-    });
-  </script>
+      <div class="card">
+        <h2>مقاله ۴: مطالعه کیفی هند</h2>
+        <p class="authors">Taddi et al. (2024)</p>
+        <p><strong>روش:</strong> کیفی</p>
+        <p>نوجوانان دچار اضطراب، خواب مختل و فشار روانی هستند؛ ولی استفاده مفید نیز گزارش شد.</p>
+      </div>
+    </section>
+
+    <section class="summary">
+      <h2>جمع‌بندی</h2>
+      <p>
+        هر ۴ مقاله بر تأثیر دوگانه شبکه‌های اجتماعی تأکید دارند. مقاله ترکیبی بهترین درک را از نقش سلامت روان به‌عنوان واسطه ارائه می‌دهد.
+        پیشنهادات شامل افزایش سواد رسانه‌ای، تغییر طراحی شبکه‌ها و مداخلات درمانی هدفمند برای نوجوانان است.
+      </p>
+    </section>
+
+    <footer>
+      <p>طراحی شده برای پروژه درس روش تحقیق - فروردین ۱۴۰۴</p>
+    </footer>
+  </div>
 </body>
 </html>
